fix list item text issues on smaller screens #67

--- a/client/stylesheets/devel.import.less
+++ b/client/stylesheets/devel.import.less
@@ -282,14 +282,14 @@ button {
   min-height: 750px;
 
   .overlay {
-    margin-top: 62px;
+  }
+
+  #intro {
+    z-index: 9000;
   }
 
   ul#previous-players {
-    #intro {
-      height: 62px;
-    }
-
+  
     #invite-all {
       height: 90px;
 
@@ -336,7 +336,7 @@ button {
         color: #636363;
         position: absolute;
         left: 45px;
-        right: 50px;
+        right: 10px;
         top: 35px;
       }
     }
